2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/17_literal_sans_aff.deca
// Description :
//  Test sur literal 
// Resultats :
//    Valide 
//
// Historique :
// cree le 10/01/2024

{
    2 ;
    "bonjour";
    true ;
    2.3; 
}