2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/50_not_string.deca
// Description :
//      Not ! devant string 
// Resultats :
//    Erreur Contexteulle : ligne 10 : l'opération Not ! devant string n'est pas valide
//
// Historique :
// cree le 10/01/2024

{
    !"bonjour";
}